--- a/DEU/DEUProject/MainPage.xaml
+++ b/DEU/DEUProject/MainPage.xaml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TabbedPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:local="clr-namespace:DEUProject" x:Class="DEUProject.MainPage">    
+<TabbedPage xmlns="http://xamarin.com/schemas/2014/forms"
+            xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+            xmlns:local="clr-namespace:DEUProject"
+            x:Class="DEUProject.MainPage"
+            Title="동의대학교 행사 알림">    
     <TabbedPage.Children>
         <ContentPage Title="DAP">
             <StackLayout>
